ajustes de texto e inclusão de ícones

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <main>
-        <div class="container-sm text-indigo-social-media justify-content-start align-items-center gap-4 p-2 mb-2 rounded-bottom bg-social-media">
+        <div class="container-sm text-indigo-social-media justify-content-start align-items-center gap-5 p-2 mb-2 rounded-bottom bg-social-media">
             <a class="text-indigo-social-media text-decoration-none small" href="https://www.linkedin.com/in/oberdanbrito"><i class="bi bi-linkedin me-1"></i>oberdanbrito</a>
             <a class="text-indigo-social-media text-decoration-none small" href="https://github.com/oberdanbrito"><i class="bi bi-github me-1"></i>oberdanbrito</a>
             <a class="text-indigo-social-media text-decoration-none small" href="https://wakatime.com/@Oberdan"><i class="bi bi-github me-1"></i>wakatime.com/@Oberdan</a>
@@ -46,20 +46,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-8 col-md-9 mb-3">
+                <div class="col-8 col-md-9 mb-3 mt-3">
                     <div class="row mb-3 border-bottom">
-                        <h4><i class="bi bi-person-badge-fill me-1 text-muted"></i> Minha Experiência <span class="text-blue-300 fs-6">(Soft skills)</span></h4>
+                        <h4><i class="bi bi-person-badge"></i>Minha Experiência <span class="text-blue-300 fs-6">(Soft skills)</span></h4>
                         <p class="m-3" style="text-align: justify">Atuou como ponto focal entre a equipe de negócios e desenvolvimento, traduzindo requisitos de negócio em especificações técnicas detalhadas para a equipe de desenvolvimento. Tenha em sua equipe um profissional dedicado a compreender as necessidades do seu negócio, experiênte em resolver <strong class="text-primary">problemas técnicos</strong> e a traduzi-las em soluções tecnológicas eficazes.</p>
                     </div>
                     <div class="row">
-                        <h4><i class="bi bi-stars me-1 text-muted"></i> Habilidades</h4>
-                        <p class="mb-3" style="text-align: justify">Sou desenvolvedor <strong class="text-success">Full Stack</strong> com mais de 15 anos de experiência em projetos desafiadores, utilizando tecnologias como <span class="fw-medium text-indigo">JavaScript, C/C#, PHP, Node.js, API REST</span>, bancos de dados relacionais e não relacionais.</p>
+                        <h4><i class="bi bi-stars"></i>Habilidades</h4>
+                        <p class="mb-3" style="text-align: justify">Sou desenvolvedor <strong class="text-success">Full Cycle</strong>. Com mais de 15 anos de experiência em projetos desafiadores, utilizando tecnologias como <span class="fw-medium text-indigo">JavaScript, C/C#, PHP, Node.js, API REST</span>, bancos de dados relacionais e não relacionais.</p>
                         <p class="mb-3" style="text-align: justify">Possuo um histórico comprovado em conduzir projetos do início ao fim, desde a concepção até a entrega, garantindo a satisfação do cliente e o sucesso do negócio. Com sólida experiência em todos os ciclos de desenvolvimento, desde a análise de requisitos até a implantação e treinamento, sou um entusiasta da tecnologia e acredito na importância da colaboração e do compartilhamento de conhecimento.</p>
-                        <div class="container d-flex justify-content-end gap-3 mb-2">
-                            <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#git</a>
+                        <div class="container d-flex gap-2 justify-content-end">
+                            <a class="translate-middle rounded-pill hard-skill text-indigo p-2 me-2">#git</a>
                             <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#github</a>
                             <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#gitflow</a>
-                            <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#Scrum</a>
+                            <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#scrum</a>
                             <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#kanban</a>
                             <a class="translate-middle rounded-pill hard-skill text-indigo p-2">#CI/CD</a>
                         </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="row mb-3 border-bottom">
-                <h4>Experiência profissional</h4>
+                <h4><i class="bi bi-regex"></i>Experiência profissional</h4>
                 <div class="row p-3">
                     <div class="col">
                         <div class="card shadow">
@@ -78,7 +78,7 @@
                                     </div>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item text-muted"><small>Mai/2011 - Atual</small></li>
-                                        <li class="list-group-item text-muted"><small><b>Cargo:</b> Diretor e desenvolvedor</small></li>
+                                        <li class="list-group-item text-muted"><small><b>Cargo:</b> Desenvolvedor Senior</small></li>
                                         <li class="list-group-item text-muted text-expertize-paragraf">
                                             <p>Como gestor e desenvolvedor, pude aprimorar minhas ideias e aplicá-las numa diversificada carteira de clientes.</p>
                                             <p>Entre os principais produtos de software, destaca-se o controle de acesso para condomínios. Uma solução abrangente, responsável pela autorização veícular, de pessoas e atendimento online em diferentes conveniências.</p>
@@ -128,13 +128,51 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-3 border-bottom">
-                <h4>Projetos</h4>
+            <div class="row pb-3 mb-3 border-bottom">
+                <h4><i class="bi bi-code-slash"></i>Projetos</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col">
+                                <h5>Sistema de vendas - Telematrix</h5>
+                                <div class="list-group-item border-0"><small><b>Ramo de atuação</b>: Vendas, contact center</small></div>
+                                <div class="list-group-item border-0 text-muted">
+                                    <small>Solução: Através do componente lógico da Ditronic, foi possível automatizar as operações do contact center, realizando ligações analógicas, organizando as filas de leads, monitorando o status das ligações, registrando os detalhes das vendas e obtendo 100% das gravações telefônicas. Com isso, proporcionamos uma maior eficiência do produto de vendas.</small>
+                                </div>
+                                <div class="list-group-item border-0">
+                                    <div class="container justify-content-end gap-3 mb-2">
+                                        <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Visual Basic 6</span>
+                                        <span class="translate-middle rounded-pill hard-skill text-indigo p-2">PostgreSQL 9</span>
+                                        <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Linux CentOS</span>
+                                        <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Ditronic</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <h5>Software para condomínios - Verticals</h5>
+                                <div class="list-group-item border-0"><small><b>Ramo de atuação</b>: Condomínios</small></div>
+                                <div class="list-group-item border-0 text-muted">
+                                    <p><small>Solução: Uma plataforma completa para controle de acesso e conveniência em condomínios. O sistema conta com a integração de diferentes tipos de hardwares como controladora Nice, Identificação Facial da Hikvision, Impressoras Bematech e leitores Datalogic.</small></p>
+                                    <p><small>Essa junção de tecnologias proporciona um sistema muito ágil em suas autorizações de acesso veícular, moradores, visitantes e prestadores de serviço. O sistema ainda conta com serviços administrativos para condomínios como Mensageria, Cadastro completo de residentes, visitantes, prestadores de serviço, regras e outros serviços de conveniência.</small></p>
+                                </div>
+                                <div class="container justify-content-end">
+                                    <span class="translate-middle rounded-pill hard-skill text-indigo p-2">PostgreSQL 14</span>
+                                    <span class="translate-middle rounded-pill hard-skill text-indigo p-2">C# .NET Framework 4.5</span>
+                                    <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Linux Debian</span>
+                                    <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Nice</span>
+                                    <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Bematech</span>
+                                    <span class="translate-middle rounded-pill hard-skill text-indigo p-2">Datalogic</span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <div class="row mb-5 border-bottom">
-                <h4>Conhecimento e domínio</h4>
+            <div class="row mb-5 pb-3 border-bottom">
+                <h4><i class="bi bi-award"></i>Conhecimento e domínio</h4>
+                <h5 class="m-1">Linguagens de programação, frameworks e componentes</h5>
                 <div class="row mt-3 languages justify-content-center">
-                    <h5>Linguagens de programação, frameworks e componentes</h5>
+
                     <div class="row gap-5 justify-content-around">
                         <div class="col">
                             <div class="list-group list-group-flush">
@@ -379,28 +417,27 @@
     </main>
     <div class="container">
         <footer>
-            <div>
-                <div class="col">
-                    <h4 class="mb-2">Inicie uma conversa</h4>
-                    <div class="row">
-                        <div class="col">
-                            <div class="row mb-3">
-                                <small class="border border-indigo p-2 rounded-5 text-indigo-social-media"><i class="bi bi-telephone-forward text-indigo me-1"></i> 11 9 9581-0657</small>
-                            </div>
-                            <div class="row">
-                                <small class="border border-indigo p-2 rounded-5 text-indigo-social-media"><i class="bi bi-envelope-open text-indigo"></i> oberdan@craos.net</small>
-                            </div>
-                        </div>
-                        <div class="col">
+            <h4 class="mb-2"><i class="bi bi-chevron-double-right"></i>Inicie uma conversa</h4>
+            <div class="row">
+                <div class="col mt-1 ms-5">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item border-0"><small><i class="bi bi-telephone-forward text-indigo me-1"></i> 11 9 9581-0657</small></li>
+                        <li class="list-group-item border-0"><small><i class="bi bi-envelope-open text-indigo"></i> oberdan@craos.net</small></li>
+                        <li class="list-group-item border-0"><small><i class="bi bi-signpost text-indigo"></i> Rua George Rexroth, 706 - Diadema - São Paulo</small></li>
+                    </ul>
+                </div>
+                <div class="col d-flex justify-content-end align-items-center">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item border-0">
+                            <h5>Whatsapp</h5>
                             <img alt="Whats: +5511995810657" class="col-5 img-fluid" src="assets/images/wa.link_3os90k.png">
-                        </div>
-                    </div>
-
+                        </li>
+                    </ul>
                 </div>
             </div>
 
             <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                <p>© 2024 Este documento foi desenvolvido por Oberdan Brito, usando Bootstrap. Para saber mais acesse o projeto em <a class="text-indigo-social-media" href="https://github.com/OberdanBrito/curriculo">github.com/OberdanBrito/curriculo</a></p>
+                <small>© 2024 Este documento foi desenvolvido por Oberdan Brito, usando Bootstrap. Para saber mais acesse o projeto em <a class="text-indigo-social-media" href="https://github.com/OberdanBrito/curriculo">github.com/OberdanBrito/curriculo</a></small>
             </div>
         </footer>
     </div>
