--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 <div class="col-8 col-md-9 mb-3 mt-3">
                     <div class="row mb-3 border-bottom">
                         <h4><i class="bi bi-person-badge"></i>Minha Experiência <span class="text-blue-300 fs-6">(Soft skills)</span></h4>
-                        <p class="m-3" style="text-align: justify">Atuou como ponto focal entre a equipe de negócios e desenvolvimento, traduzindo requisitos de negócio em especificações técnicas detalhadas para a equipe de desenvolvimento. Tenha em sua equipe um profissional dedicado a compreender as necessidades do seu negócio, experiênte em resolver <strong class="text-primary">problemas técnicos</strong> e a traduzi-las em soluções tecnológicas eficazes.</p>
+                        <p class="m-3" style="text-align: justify">Atuou como ponto focal entre a equipe de negócios e desenvolvimento, traduzindo requisitos de negócio em especificações técnicas detalhadas para a equipe de desenvolvimento. Tenha em sua equipe um profissional dedicado a compreender as necessidades do seu negócio, experiente em resolver <strong class="text-primary">problemas técnicos</strong> e a traduzi-las em soluções tecnológicas eficazes.</p>
                     </div>
                     <div class="row">
                         <h4><i class="bi bi-stars"></i>Habilidades</h4>
@@ -171,7 +171,7 @@
                                 <div class="list-group-item border-0"><small><b>Ramo de atuação</b>: Condomínios</small></div>
                                 <div class="list-group-item border-0 text-muted">
                                     <p><small>Solução: Uma plataforma completa para controle de acesso e conveniência em condomínios. O sistema conta com a integração de diferentes tipos de hardwares como controladora Nice, Identificação Facial da Hikvision, Impressoras Bematech e leitores Datalogic.</small></p>
-                                    <p><small>Essa junção de tecnologias proporciona um sistema muito ágil em suas autorizações de acesso veícular, moradores, visitantes e prestadores de serviço. O sistema ainda conta com serviços administrativos para condomínios como Mensageria, Cadastro completo de residentes, visitantes, prestadores de serviço, regras e outros serviços de conveniência.</small></p>
+                                    <p><small>Essa junção de tecnologias proporciona um sistema muito ágil em suas autorizações de acesso veicular, moradores, visitantes e prestadores de serviço. O sistema ainda conta com serviços administrativos para condomínios como Mensageria, Cadastro completo de residentes, visitantes, prestadores de serviço, regras e outros serviços de conveniência.</small></p>
                                 </div>
                                 <div class="container justify-content-end">
                                     <span class="translate-middle rounded-pill hard-skill text-indigo p-2">PostgreSQL 14</span>
